--- a/meson.build
+++ b/meson.build
@@ -1,3 +1,3 @@
 project('evatest', 'c', version: '1.0')
 
-test_dep = declare_dependency(include_directories: include_directories('evatest'))
+test_dep = declare_dependency(include_directories: include_directories('.'))
