Revert "Set EVATEST_TAP as global arguments"
This reverts commit 9f149983cb9175efe4cd81e08a248d64501ddd63.

--- a/meson.build
+++ b/meson.build
@@ -3,7 +3,7 @@ project('evatest', 'c', version: '1.1')
 test_dep = declare_dependency(include_directories: include_directories('.'))
 
 if get_option('TAP')
-    add_global_arguments('-DEVATEST_TAP', language: 'c')
+    add_project_arguments('-DEVATEST_TAP', language: 'c')
     test_works_exe = executable('evatest-test-works', 'test/test.c', dependencies: test_dep, c_args: ['-DSHOULD_WORK'])
     test_fails_exe = executable('evatest-test-fails', 'test/test.c', dependencies: test_dep)
     test('works', test_works_exe, protocol: 'tap')
